# sterling-python-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
sterling/: __init__.py
sterling_client/: client.py
