[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sterling"
version = "0.0.1"
description = "Sterling Cache Client - Python client for Sterling Cache"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ghosecorp", email = "ghosecorp@gmail.com"}
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/ghosecorp/sterling-python-client.git"
Repository = "https://github.com/ghosecorp/sterling-python-client.git"
